[workspace]
members = [
    "compiler/rac",
    "compiler/rac-parser",
    "compiler/rac-ast",
    "compiler/rac-diagnostics",
]
resolver = "3"

[workspace.package]
authors = [
    "Roman MAKSIMOVICH <rmaksimovich@connect.ust.hk>",
    "Yiu Tsz WU <ytwuac@connect.ust.hk>"
]
edition = "2024"
rust-version = "1.94.1"
version = "0.1.0"

[workspace.dependencies]
# tikv-jemallocator = "0.6.1"
