[package]
name = "rac"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# tikv-jemallocator = { workspace = true }
rac-ast = { path = "../rac-ast" }
rac-parser = { path = "../rac-parser" }
rac-diagnostics = { path = "../rac-diagnostics" }
rac-typecheck = { path = "../rac-typecheck" }
